src/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
	background-color: theme(colors.slate.50);
}

@media (prefers-color-scheme: dark) {
	html {
		background-color: theme(colors.gray.950);
	}
}

body {
	min-height: 100vh;
}

@media (prefers-color-scheme: dark) {
	body {
		color: theme(colors.slate.200);
	}
}

h1 {
	font-size: theme(fontSize.3xl);
	font-weight: theme(fontWeight.semibold);
	margin: 0;
	padding: 0;
}

